--- a/funnel/static/sass/_header.scss
+++ b/funnel/static/sass/_header.scss
@@ -539,12 +539,11 @@
 }
 
 .sub-navbar-container--footer {
-  margin-top: 70px;
-  margin-bottom: 50px;
+  margin-top: 32px;
+  margin-bottom: 56px;
 }
 @media (min-width: 768px) {
   .sub-navbar-container--footer {
-    margin-top: 150px;
     margin-bottom: 0;
 
     .sub-navbar {
@@ -554,6 +553,7 @@
 
       .sub-navbar__item {
         margin: 0;
+        color: $mui-text-accent-lighter;
       }
     }
   }
