--- a/funnel/static/sass/_home.scss
+++ b/funnel/static/sass/_home.scss
@@ -303,7 +303,7 @@
 }
 
 .profile--hg {
-  margin-bottom: $mui-grid-padding;
+  margin-bottom: 0;
 
   .profile__banner {
     .profile__banner__box {
